--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,9 +16,7 @@ body {
    font-feature-settings: "ss01", "ss03", "ss04", "ss05";
    min-height: 100vh;
    padding-bottom: 10rem;
-   overflow: scroll;
    -ms-overflow-style: none; /* Internet Explorer 10+ */
-   scrollbar-width: none; /* Firefox */
 }
 body::-webkit-scrollbar {
    display: none; /* Safari and Chrome */
@@ -37,6 +35,7 @@ body::-webkit-scrollbar {
    --bg: #aaa;
    --max-width: 54ch;
    font-size: 16px;
+   scrollbar-width: none;
 }
 
 ::selection {
